; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlxsw/extr_spectrum.c_mlxsw_sp_port_vlan_cleanup.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlxsw/extr_spectrum.c_mlxsw_sp_port_vlan_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlxsw_sp_port_vlan = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mlxsw_sp_port_vlan*)* @mlxsw_sp_port_vlan_cleanup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mlxsw_sp_port_vlan_cleanup(%struct.mlxsw_sp_port_vlan* %0) #0 {
  %2 = alloca %struct.mlxsw_sp_port_vlan*, align 8
  store %struct.mlxsw_sp_port_vlan* %0, %struct.mlxsw_sp_port_vlan** %2, align 8
  %3 = load %struct.mlxsw_sp_port_vlan*, %struct.mlxsw_sp_port_vlan** %2, align 8
  %4 = getelementptr inbounds %struct.mlxsw_sp_port_vlan, %struct.mlxsw_sp_port_vlan* %3, i32 0, i32 1
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load %struct.mlxsw_sp_port_vlan*, %struct.mlxsw_sp_port_vlan** %2, align 8
  %9 = call i32 @mlxsw_sp_port_vlan_bridge_leave(%struct.mlxsw_sp_port_vlan* %8)
  br label %19

10:                                               ; preds = %1
  %11 = load %struct.mlxsw_sp_port_vlan*, %struct.mlxsw_sp_port_vlan** %2, align 8
  %12 = getelementptr inbounds %struct.mlxsw_sp_port_vlan, %struct.mlxsw_sp_port_vlan* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %18

15:                                               ; preds = %10
  %16 = load %struct.mlxsw_sp_port_vlan*, %struct.mlxsw_sp_port_vlan** %2, align 8
  %17 = call i32 @mlxsw_sp_port_vlan_router_leave(%struct.mlxsw_sp_port_vlan* %16)
  br label %18

18:                                               ; preds = %15, %10
  br label %19

19:                                               ; preds = %18, %7
  ret void
}

declare dso_local i32 @mlxsw_sp_port_vlan_bridge_leave(%struct.mlxsw_sp_port_vlan*) #1

declare dso_local i32 @mlxsw_sp_port_vlan_router_leave(%struct.mlxsw_sp_port_vlan*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
